# ccmate

./: CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  monitor-spec.md  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
changelog/: 0.2.4.md  0.2.5.md  0.2.7.md
public/: plugin.json
public/preload/: services.js
src/: main.tsx  router.tsx  tw.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  tray.rs
src/components/: ActivityGrid.tsx  ErrorBoundary.tsx  GLMBanner.tsx  GLMDialog.tsx  KimiDialog.tsx  Layout.tsx  MiniMaxDialog.tsx  QueryErrorFallback.tsx  RouteWrapper.tsx  TokenUsageChart.tsx  UtoolsLifecycle.tsx
src/components/ui/: button.tsx  dialog.tsx  select.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  fr.json  ja.json  zh.json
src/lib/: query.ts  tracker.ts  use-codemirror-theme.ts  utils.ts  utools-adapter.ts  utools-dialog.ts
src/pages/: AgentsPage.tsx  CommandsPage.tsx  ConfigEditorDialog.tsx  ConfigEditorPage.tsx  ConfigSwitcherPage.tsx  MCPPage.tsx  MonitorPage.tsx  NotificationPage.tsx  SettingsPage.tsx  UsagePage.tsx
src/types/: utools.d.ts
